--- a/index.html
+++ b/index.html
@@ -5,29 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Split your bill</title>
 </head>
 <body>
-    <div class="father">
-        <div class="container">
-            <div class="left-column">
+    <div class="center">
+        <div class="container center">
+            <div class="text-center">
                 <p class="mytitle">Split your bill</p>
                 <p class="latsub">Leave a tip</p>
-                    <button class="latbtn">No</button>
-                    <button class="latbtn">5%</button>
-                    <button class="latbtn">10%</button>
+                    <button class="latbtn" value="false">No</button>
+                    <button class="latbtn" value="5">5%</button>
+                    <button class="latbtn" value="10">10%</button>
                     <br>
-                    <button class="latbtn">15%</button>
-                    <button class="latbtn">20%</button>
-                    <button class="latbtn">25%</button>
+                    <button class="latbtn" value="15">15%</button>
+                    <button class="latbtn" value="20">20%</button>
+                    <button class="latbtn" value="25">25%</button>
                     <br>
                 <div class="inpcont">
                     <input type="text" class="pinput" placeholder="Total Price">
                     <input type="number" class="npinput" placeholder="N°">
                 </div> 
+                <br>
+                <button class="calcbtn">Calculate</button>
             </div>
         </div>
     </div>
