--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <title>Split your bill</title>
+    <title>Split your receipt</title>
 </head>
 <body>
     <div class="center">
         <div class="container center">
             <div class="text-center" style="display: block;" id="input">
-                <p class="mytitle">Split your bill</p>
+                <p class="mytitle">Split receipt</p>
                 <p class="latsub">Leave a tip</p>
                     <button class="latbtn" value="false" onclick="getPercentage(this.value)">No</button>
                     <button class="latbtn" value="5" onclick="getPercentage(this.value)">5%</button>
