added copyright comment in all files

--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<!--
+
+    ------------------------------------------------------------------------------------   
+    Copyright © 2022, Mattia Capelli
+    Developed by: Mattia Capelli
+    Website: http://www.mattiacapelli.com
+    Project: http://splityourreceipt.mattiacapelli.com/
+    GitHub: https://github.com/mattiacapelli/split-your-receipt
+    License: MIT (https://github.com/mattiacapelli/split-your-receipt/blob/main/LICENSE)
+    ------------------------------------------------------------------------------------
+    
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
